--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,21 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-/* navbar */
+/* navbar, sidebars */
 .navbar {
   width: 100%;
   height: 50px;
   background-color: black;
+}
+
+.navbar-container {
+  display: flex;
+}
+
+.sidebar {
+  width: 50px;
+  height: 100%;
+  background-color: black;
+  position: fixed;
+  top: 0;
 }
