--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ body {
   flex: 2;
   display: flex;
   align-items: center;
+
+  justify-content: flex-end;
 }
 
 .profile-text-container {
@@ -73,4 +75,30 @@ body {
   background-color: black;
   position: fixed;
   top: 0;
+}
+
+.toggle {
+  width: 40px;
+  height: 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: white;
+  position: relative;
+}
+
+.toogle-icon {
+  color: goldenrod;
+}
+
+.toggle-ball {
+  width: 18px;
+  background-color: black;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  right: 1px;
+  border-radius: 50%;
+  cursor: pointer;
 }
