--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ body {
   background-color: black;
   position: fixed;
   top: 0;
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px;
+  align-items: center;
 }
 
 .toggle {
@@ -101,4 +105,20 @@ body {
   right: 1px;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.left-menu-icon {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+
+.container {
+  background-color: #151515;
+  height: calc(100vh - 50px);
+  color: white;
+}
+
+.content-container {
+  margin-left: 50px;
 }
