--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,29 @@ body {
 .content-container {
   margin-left: 50px;
 }
+
+/* featured movie section */
+.featured-content {
+  height: 50vh;
+  padding: 50px 50px 50px 100px;
+}
+
+.featured-title {
+  width: 200px;
+}
+
+.featured-desc {
+  width: 500px;
+  color: lightgray;
+  margin: 30px 0;
+}
+
+.featured-button {
+  background-color: #4dbf00;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}
