movie slider design part1

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
 
 .container {
   background-color: #151515;
-  height: calc(100vh - 50px);
+  min-height: calc(100vh - 50px);
   color: white;
 }
 
@@ -147,4 +147,14 @@ body {
   border: none;
   outline: none;
   font-weight: bold;
+}
+
+/* movie slider  */
+.movie-list-container {
+  padding: 20px;
+}
+
+.movie-list-item-image {
+  width: 270px;
+  height: 200px;
 }
