--- a/css/style.css
+++ b/css/style.css
@@ -159,12 +159,15 @@ body {
   height: 200px;
   object-fit: cover;
   transition: all ease-in-out 0.8s;
+  border-radius: 20px;
 }
 
 .movie-list {
   display: flex;
   height: 300px;
   align-items: center;
+  transform: translateX(0);
+  transition: all 1s ease-in-out;
 }
 
 .movie-list-item {
@@ -226,6 +229,7 @@ body {
 
 .movie-list-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .arrow {
