--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,33 @@ body {
   cursor: pointer;
   opacity: 0.5;
 }
+
+.container {
+  background-color: white;
+}
+
+.movie-list-title {
+  color: black;
+}
+
+.navbar-container {
+  color: black;
+  background-color: white;
+}
+
+.sidebar {
+  background-color: white;
+}
+
+.left-menu-icon {
+  color: black;
+}
+
+.toggle {
+  background-color: black;
+}
+
+.toggle-ball {
+  background-color: white;
+  transform: translateX(-20px);
+}
